--- a/homework-9-16/homework-9-16/homework-9-16.vcxproj.filters
+++ b/homework-9-16/homework-9-16/homework-9-16.vcxproj.filters
@@ -15,19 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="homework-9-2.c">
+    <ClCompile Include="test.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="text.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="contact.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="contect.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
