--- a/homework-9-16/homework-9-16/homework-9-16.vcxproj
+++ b/homework-9-16/homework-9-16/homework-9-16.vcxproj
@@ -11,8 +11,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{C3102882-E1A1-4F89-A24C-28ECAA27DEF7}</ProjectGuid>
-    <RootNamespace>homework92</RootNamespace>
+    <ProjectGuid>{45EE44B5-66D0-44EE-9965-8F6D7585CE1A}</ProjectGuid>
+    <RootNamespace>homework916</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -65,12 +65,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="contact.c" />
-    <ClCompile Include="homework-9-2.c" />
-    <ClCompile Include="text.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="contect.h" />
+    <ClCompile Include="test.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
